<resources>
    <string name="app_name">jian qin browser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ContentDescriptionPrivateBrowsingIndicator">test it i don not kown</string>
    <string name="ContentDescriptionMenuButton">test it</string>
    <string name="ContentDescriptionGoStopReloadButton">test it </string>
    <string name="UrlBarUrlHint">please input the url</string>
    <string name="action_settings">Settings</string>
    <string name="action_fresh">fresh</string>
    <string name="action_scan">scan</string>
    <string name="action_share">Share</string>
    <string name="action_loadinhttps">load url use https </string>
    <string name="action_openscanedurl">open url</string>
    <string name="action_newtab">open new tab</string>
    <string name="action_tabmanage">manage tabs</string>
    <string name="action_nightmode">nightmode</string>
    <string name="action_daymode">daymode</string>
    <string name="icon_grant">Icons made by Madebyoliver from www.flaticon.com is licensed by CC 3.0 BY</string>

    <string name="SearchUrlGoogle">https://www.google.com.hk/m?q={searchTerms}</string>
    <string name="SearchUrlBing">http://cn.bing.com/search?q={searchTerms}</string>
    <string name="SearchUrlWolframAlpha">http://m.wolframalpha.com/input/?i={searchTerms}</string>
    <string name="version">v1.5</string>


    <string name="pref_key_home">prefhome</string>
    <string name="pref_summary_home">set the home url</string>
    <string name="pref_summary_fontsize">the setting will be use at next boot</string>
    <string name="pref_key_searchitems">presearchitems</string>
    <string name="pref_key_fontsizeitems">prefontsizeitems</string>
    <string name="pref_title_fontsize">set the font size</string>
    <string name="pref_title_searchitems">search engine</string>
    <string name="pref_title_EnableImages">enable load imagese</string>
    <string name="pref_key_enableimages">preenableimage</string>
    <string name="addtab">add tab</string>

    <string-array name="pref_entries_searchitems">
        <item>bing</item>
        <item>google</item>
        <item>wolframalpha</item>
    </string-array>

    <string-array name="pref_entryvalues_searchitems">
        <item>bing</item>
        <item>google</item>
        <item>wolframalpha</item>
    </string-array>

    <string-array name="pref_entries_fontsizeitems">
        <item>50%</item>
        <item>75%</item>
        <item>100%</item>
        <item>150%</item>
        <item>200%</item>
    </string-array>

    <string-array name="pref_entryvalues_fontsizeitems">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
