<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created By WeihuaGu (email:weihuagu_work@163.com)
  ~ Copyright (c) 2017
  ~ All right reserved.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="浏览设置">

        <EditTextPreference
            android:defaultValue=""
            android:key="@string/pref_key_home"
            android:summary="@string/pref_summary_home"
            android:title="主页" />

            <ListPreference
                android:key="@string/pref_key_searchitems"
                android:title="@string/pref_title_searchitems"
                android:entries="@array/pref_entries_searchitems"
                android:entryValues="@array/pref_entryvalues_searchitems"
                >
            </ListPreference>
            <ListPreference
                android:summary="@string/pref_summary_fontsize"
            android:key="@string/pref_key_fontsizeitems"
            android:title="@string/pref_title_fontsize"
            android:entries="@array/pref_entries_fontsizeitems"
            android:entryValues="@array/pref_entryvalues_fontsizeitems"
            >
            </ListPreference>

         <CheckBoxPreference
            android:title="@string/pref_title_EnableImages"
            android:defaultValue="true"
            android:key="@string/pref_key_enableimages" />


    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="关于">

        <Preference
            android:layout="@layout/preference_item"
            android:title="版本"
            android:summary="@string/version">
        </Preference>
        <Preference
            android:layout="@layout/preference_item"
            android:title="图标授权"
            android:summary="@string/icon_grant">
            <intent
                android:action="android.intent.action.VIEW"
                android:category="android.intent.category.DEFAULT"
                android:data="http://www.flaticon.com/authors/madebyoliver"/>
        </Preference>


    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="感谢有你">
        <Preference
            android:layout="@layout/preference_item"
            android:summary="邮箱：weihuagu_work@163.com"
            android:title="作者：weihuagu"/>

        <Preference
            android:layout="@layout/preference_item"
            android:title="捐助开发者">
        <intent
            android:action="android.intent.action.VIEW"
            android:category="android.intent.category.DEFAULT"
            android:data="https://weihuagu.github.io/donate/"/>
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory

        android:layout="@layout/preference_category_widget"
        android:title="广告">
    </PreferenceCategory>


</PreferenceScreen>