<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created By WeihuaGu (email:weihuagu_work@163.com)
  ~ Copyright (c) 2017
  ~ All right reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_fresh"
        android:orderInCategory="100"
        android:title="@string/action_fresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_loadinhttps"
        android:orderInCategory="100"
        android:title="@string/action_loadinhttps"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_newtab"
        android:orderInCategory="100"
        android:title="@string/action_newtab"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tabmanage"
        android:orderInCategory="100"
        android:title="@string/action_tabmanage"
        app:showAsAction="never" />
</menu>
