<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_scan" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>


    <!--<group>
        <item android:title="Interface">
            <menu>
                <item
                    android:id="@+id/nav_nightmode"
                    android:icon="@drawable/ic_menu_moon"
                    android:title="@string/action_nightmode" />
            </menu>
        </item>
    </group>-->

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_share" />
        </menu>
    </item>



</menu>
